src/pkg/aql/parser/aql_parser.go
// Code generated from parser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // AqlParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AqlParser struct {
	*antlr.BaseParser
}

var aqlparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func aqlparserParserInit() {
	staticData := &aqlparserParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "';'", "'<'", "'>'", "'<='", "'>='", "'!='", "'='",
		"'('", "')'", "','", "'/'", "'*'", "'+'", "'-'", "'['", "']'", "'{'",
		"'}'", "'--'",
	}
	staticData.symbolicNames = []string{
		"", "WS", "UNICODE_BOM", "COMMENT", "SELECT", "AS", "FROM", "WHERE",
		"ORDER", "BY", "DESC", "DESCENDING", "ASC", "ASCENDING", "LIMIT", "OFFSET",
		"DISTINCT", "VERSION", "LATEST_VERSION", "ALL_VERSIONS", "NULL", "TOP",
		"FORWARD", "BACKWARD", "CONTAINS", "AND", "OR", "NOT", "EXISTS", "COMPARISON_OPERATOR",
		"LIKE", "MATCHES", "STRING_FUNCTION_ID", "NUMERIC_FUNCTION_ID", "DATE_TIME_FUNCTION_ID",
		"LENGTH", "POSITION", "SUBSTRING", "CONCAT", "CONCAT_WS", "ABS", "MOD",
		"CEIL", "FLOOR", "ROUND", "CURRENT_DATE", "CURRENT_TIME", "CURRENT_DATE_TIME",
		"NOW", "CURRENT_TIMEZONE", "COUNT", "MIN", "MAX", "SUM", "AVG", "TERMINOLOGY",
		"PARAMETER", "ID_CODE", "AT_CODE", "CONTAINED_REGEX", "ARCHETYPE_HRID",
		"IDENTIFIER", "TERM_CODE", "URI", "BOOLEAN", "INTEGER", "REAL", "SCI_INTEGER",
		"SCI_REAL", "DATE", "TIME", "DATETIME", "STRING", "SYM_SEMICOLON", "SYM_LT",
		"SYM_GT", "SYM_LE", "SYM_GE", "SYM_NE", "SYM_EQ", "SYM_LEFT_PAREN",
		"SYM_RIGHT_PAREN", "SYM_COMMA", "SYM_SLASH", "SYM_ASTERISK", "SYM_PLUS",
		"SYM_MINUS", "SYM_LEFT_BRACKET", "SYM_RIGHT_BRACKET", "SYM_LEFT_CURLY",
		"SYM_RIGHT_CURLY", "SYM_DOUBLE_DASH",
	}
	staticData.ruleNames = []string{
		"selectQuery", "selectClause", "fromClause", "whereClause", "orderByClause",
		"limitClause", "selectExpr", "fromExpr", "whereExpr", "orderByExpr",
		"columnExpr", "containsExpr", "identifiedExpr", "classExprOperand",
		"terminal", "identifiedPath", "pathPredicate", "standardPredicate",
		"archetypePredicate", "nodePredicate", "nodePredicateAdditionalData",
		"versionPredicate", "pathPredicateOperand", "objectPath", "pathPart",
		"likeOperand", "matchesOperand", "valueListItem", "primitive", "numericPrimitive",
		"functionCall", "aggregateFunctionCall", "terminologyFunction", "top",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AqlParserInit initializes any static state used to implement parser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AqlParserInit() {
	staticData := &aqlparserParserStaticData
	staticData.once.Do(aqlparserParserInit)
}

// NewAqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAqlParser(input antlr.TokenStream) *AqlParser {
	AqlParserInit()
	this := new(AqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &aqlparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "parser.g4"

	return this
}

// AqlParser tokens.
const (
	AqlParserEOF                   = antlr.TokenEOF
	AqlParserWS                    = 1
	AqlParserUNICODE_BOM           = 2
	AqlParserCOMMENT               = 3
	AqlParserSELECT                = 4
	AqlParserAS                    = 5
	AqlParserFROM                  = 6
	AqlParserWHERE                 = 7
	AqlParserORDER                 = 8
	AqlParserBY                    = 9
	AqlParserDESC                  = 10
	AqlParserDESCENDING            = 11
	AqlParserASC                   = 12
	AqlParserASCENDING             = 13
	AqlParserLIMIT                 = 14
	AqlParserOFFSET                = 15
	AqlParserDISTINCT              = 16
	AqlParserVERSION               = 17
	AqlParserLATEST_VERSION        = 18
	AqlParserALL_VERSIONS          = 19
	AqlParserNULL                  = 20
	AqlParserTOP                   = 21
	AqlParserFORWARD               = 22
	AqlParserBACKWARD              = 23
	AqlParserCONTAINS              = 24
	AqlParserAND                   = 25
	AqlParserOR                    = 26
	AqlParserNOT                   = 27
	AqlParserEXISTS                = 28
	AqlParserCOMPARISON_OPERATOR   = 29
	AqlParserLIKE                  = 30
	AqlParserMATCHES               = 31
	AqlParserSTRING_FUNCTION_ID    = 32
	AqlParserNUMERIC_FUNCTION_ID   = 33
	AqlParserDATE_TIME_FUNCTION_ID = 34
	AqlParserLENGTH                = 35
	AqlParserPOSITION              = 36
	AqlParserSUBSTRING             = 37
	AqlParserCONCAT                = 38
	AqlParserCONCAT_WS             = 39
	AqlParserABS                   = 40
	AqlParserMOD                   = 41
	AqlParserCEIL                  = 42
	AqlParserFLOOR                 = 43
	AqlParserROUND                 = 44
	AqlParserCURRENT_DATE          = 45
	AqlParserCURRENT_TIME          = 46
	AqlParserCURRENT_DATE_TIME     = 47
	AqlParserNOW                   = 48
	AqlParserCURRENT_TIMEZONE      = 49
	AqlParserCOUNT                 = 50
	AqlParserMIN                   = 51
	AqlParserMAX                   = 52
	AqlParserSUM                   = 53
	AqlParserAVG                   = 54
	AqlParserTERMINOLOGY           = 55
	AqlParserPARAMETER             = 56
	AqlParserID_CODE               = 57
	AqlParserAT_CODE               = 58
	AqlParserCONTAINED_REGEX       = 59
	AqlParserARCHETYPE_HRID        = 60
	AqlParserIDENTIFIER            = 61
	AqlParserTERM_CODE             = 62
	AqlParserURI                   = 63
	AqlParserBOOLEAN               = 64
	AqlParserINTEGER               = 65
	AqlParserREAL                  = 66
	AqlParserSCI_INTEGER           = 67
	AqlParserSCI_REAL              = 68
	AqlParserDATE                  = 69
	AqlParserTIME                  = 70
	AqlParserDATETIME              = 71
	AqlParserSTRING                = 72
	AqlParserSYM_SEMICOLON         = 73
	AqlParserSYM_LT                = 74
	AqlParserSYM_GT                = 75
	AqlParserSYM_LE                = 76
	AqlParserSYM_GE                = 77
	AqlParserSYM_NE                = 78
	AqlParserSYM_EQ                = 79
	AqlParserSYM_LEFT_PAREN        = 80
	AqlParserSYM_RIGHT_PAREN       = 81
	AqlParserSYM_COMMA             = 82
	AqlParserSYM_SLASH             = 83
	AqlParserSYM_ASTERISK          = 84
	AqlParserSYM_PLUS              = 85
	AqlParserSYM_MINUS             = 86
	AqlParserSYM_LEFT_BRACKET      = 87
	AqlParserSYM_RIGHT_BRACKET     = 88
	AqlParserSYM_LEFT_CURLY        = 89
	AqlParserSYM_RIGHT_CURLY       = 90
	AqlParserSYM_DOUBLE_DASH       = 91
)

// AqlParser rules.
const (
	AqlParserRULE_selectQuery                 = 0
	AqlParserRULE_selectClause                = 1
	AqlParserRULE_fromClause                  = 2
	AqlParserRULE_whereClause                 = 3
	AqlParserRULE_orderByClause               = 4
	AqlParserRULE_limitClause                 = 5
	AqlParserRULE_selectExpr                  = 6
	AqlParserRULE_fromExpr                    = 7
	AqlParserRULE_whereExpr                   = 8
	AqlParserRULE_orderByExpr                 = 9
	AqlParserRULE_columnExpr                  = 10
	AqlParserRULE_containsExpr                = 11
	AqlParserRULE_identifiedExpr              = 12
	AqlParserRULE_classExprOperand            = 13
	AqlParserRULE_terminal                    = 14
	AqlParserRULE_identifiedPath              = 15
	AqlParserRULE_pathPredicate               = 16
	AqlParserRULE_standardPredicate           = 17
	AqlParserRULE_archetypePredicate          = 18
	AqlParserRULE_nodePredicate               = 19
	AqlParserRULE_nodePredicateAdditionalData = 20
	AqlParserRULE_versionPredicate            = 21
	AqlParserRULE_pathPredicateOperand        = 22
	AqlParserRULE_objectPath                  = 23
	AqlParserRULE_pathPart                    = 24
	AqlParserRULE_likeOperand                 = 25
	AqlParserRULE_matchesOperand              = 26
	AqlParserRULE_valueListItem               = 27
	AqlParserRULE_primitive                   = 28
	AqlParserRULE_numericPrimitive            = 29
	AqlParserRULE_functionCall                = 30
	AqlParserRULE_aggregateFunctionCall       = 31
	AqlParserRULE_terminologyFunction         = 32
	AqlParserRULE_top                         = 33
)

// ISelectQueryContext is an interface to support dynamic dispatch.
type ISelectQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SelectClause() ISelectClauseContext
	FromClause() IFromClauseContext
	EOF() antlr.TerminalNode
	WhereClause() IWhereClauseContext
	OrderByClause() IOrderByClauseContext
	LimitClause() ILimitClauseContext
	SYM_DOUBLE_DASH() antlr.TerminalNode

	// IsSelectQueryContext differentiates from other interfaces.
	IsSelectQueryContext()
}

type SelectQueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectQueryContext() *SelectQueryContext {
	var p = new(SelectQueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AqlParserRULE_selectQuery
	return p
}

func (*SelectQueryContext) IsSelectQueryContext() {}

func NewSelectQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectQueryContext {
	var p = new(SelectQueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AqlParserRULE_selectQuery

	return p
}

func (s *SelectQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectQueryContext) SelectClause() ISelectClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectClauseContext)
}

func (s *SelectQueryContext) FromClause() IFromClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFromClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFromClauseContext)
}

func (s *SelectQueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(AqlParserEOF, 0)
}

func (s *SelectQueryContext) WhereClause() IWhereClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhereClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhereClauseContext)
}

func (s *SelectQueryContext) OrderByClause() IOrderByClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOrderByClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOrderByClauseContext)
}

func (s *SelectQueryContext) LimitClause() ILimitClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILimitClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILimitClauseContext)
}

func (s *SelectQueryContext) SYM_DOUBLE_DASH() antlr.TerminalNode {
	return s.GetToken(AqlParserSYM_DOUBLE_DASH, 0)
}

func (s *SelectQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.EnterSelectQuery(s)
	}
}

func (s *SelectQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.ExitSelectQuery(s)
	}
}

func (p *AqlParser) SelectQuery() (localctx ISelectQueryContext) {
	this := p
	_ = this

	localctx = NewSelectQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AqlParserRULE_selectQuery)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.SelectClause()
	}
	{
		p.SetState(69)
		p.FromClause()
	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserWHERE {
		{
			p.SetState(70)
			p.WhereClause()
		}

	}
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserORDER {
		{
			p.SetState(73)
			p.OrderByClause()
		}

	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserLIMIT {
		{
			p.SetState(76)
			p.LimitClause()
		}

	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserSYM_DOUBLE_DASH {
		{
			p.SetState(79)
			p.Match(AqlParserSYM_DOUBLE_DASH)
		}

	}
	{
		p.SetState(82)
		p.Match(AqlParserEOF)
	}

	return localctx
}

// ISelectClauseContext is an interface to support dynamic dispatch.
type ISelectClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SELECT() antlr.TerminalNode
	AllSelectExpr() []ISelectExprContext
	SelectExpr(i int) ISelectExprContext
	DISTINCT() antlr.TerminalNode
	Top() ITopContext
	AllSYM_COMMA() []antlr.TerminalNode
	SYM_COMMA(i int) antlr.TerminalNode

	// IsSelectClauseContext differentiates from other interfaces.
	IsSelectClauseContext()
}

type SelectClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectClauseContext() *SelectClauseContext {
	var p = new(SelectClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AqlParserRULE_selectClause
	return p
}

func (*SelectClauseContext) IsSelectClauseContext() {}

func NewSelectClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectClauseContext {
	var p = new(SelectClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AqlParserRULE_selectClause

	return p
}

func (s *SelectClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectClauseContext) SELECT() antlr.TerminalNode {
	return s.GetToken(AqlParserSELECT, 0)
}

func (s *SelectClauseContext) AllSelectExpr() []ISelectExprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISelectExprContext); ok {
			len++
		}
	}

	tst := make([]ISelectExprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISelectExprContext); ok {
			tst[i] = t.(ISelectExprContext)
			i++
		}
	}

	return tst
}

func (s *SelectClauseContext) SelectExpr(i int) ISelectExprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectExprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectExprContext)
}

func (s *SelectClauseContext) DISTINCT() antlr.TerminalNode {
	return s.GetToken(AqlParserDISTINCT, 0)
}

func (s *SelectClauseContext) Top() ITopContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopContext)
}

func (s *SelectClauseContext) AllSYM_COMMA() []antlr.TerminalNode {
	return s.GetTokens(AqlParserSYM_COMMA)
}

func (s *SelectClauseContext) SYM_COMMA(i int) antlr.TerminalNode {
	return s.GetToken(AqlParserSYM_COMMA, i)
}

func (s *SelectClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.EnterSelectClause(s)
	}
}

func (s *SelectClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.ExitSelectClause(s)
	}
}

func (p *AqlParser) SelectClause() (localctx ISelectClauseContext) {
	this := p
	_ = this

	localctx = NewSelectClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AqlParserRULE_selectClause)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.Match(AqlParserSELECT)
	}
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserDISTINCT {
		{
			p.SetState(85)
			p.Match(AqlParserDISTINCT)
		}

	}
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AqlParserTOP {
		{
			p.SetState(88)
			p.Top()
		}

	}
	{
		p.SetState(91)
		p.SelectExpr()
	}
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == AqlParserSYM_COMMA {
		{
			p.SetState(92)
			p.Match(AqlParserSYM_COMMA)
		}
		{
			p.SetState(93)
			p.SelectExpr()
		}

		p.SetState(98)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFromClauseContext is an interface to support dynamic dispatch.
type IFromClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FROM() antlr.TerminalNode
	FromExpr() IFromExprContext

	// IsFromClauseContext differentiates from other interfaces.
	IsFromClauseContext()
}

type FromClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFromClauseContext() *FromClauseContext {
	var p = new(FromClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AqlParserRULE_fromClause
	return p
}

func (*FromClauseContext) IsFromClauseContext() {}

func NewFromClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FromClauseContext {
	var p = new(FromClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AqlParserRULE_fromClause

	return p
}

func (s *FromClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *FromClauseContext) FROM() antlr.TerminalNode {
	return s.GetToken(AqlParserFROM, 0)
}

func (s *FromClauseContext) FromExpr() IFromExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFromExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFromExprContext)
}

func (s *FromClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FromClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FromClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.EnterFromClause(s)
	}
}

func (s *FromClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.ExitFromClause(s)
	}
}

func (p *AqlParser) FromClause() (localctx IFromClauseContext) {
	this := p
	_ = this

	localctx = NewFromClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AqlParserRULE_fromClause)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(99)
		p.Match(AqlParserFROM)
	}
	{
		p.SetState(100)
		p.FromExpr()
	}

	return localctx
}

// IWhereClauseContext is an interface to support dynamic dispatch.
type IWhereClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WHERE() antlr.TerminalNode
	WhereExpr() IWhereExprContext

	// IsWhereClauseContext differentiates from other interfaces.
	IsWhereClauseContext()
}

type WhereClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWhereClauseContext() *WhereClauseContext {
	var p = new(WhereClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AqlParserRULE_whereClause
	return p
}

func (*WhereClauseContext) IsWhereClauseContext() {}

func NewWhereClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WhereClauseContext {
	var p = new(WhereClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AqlParserRULE_whereClause

	return p
}

func (s *WhereClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *WhereClauseContext) WHERE() antlr.TerminalNode {
	return s.GetToken(AqlParserWHERE, 0)
}

func (s *WhereClauseContext) WhereExpr() IWhereExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhereExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhereExprContext)
}

func (s *WhereClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WhereClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WhereClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.EnterWhereClause(s)
	}
}

func (s *WhereClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AqlParserListener); ok {
		listenerT.ExitWhereClause(s)
	}
}

func (p *AqlParser) WhereClause() (localctx IWhereClauseContext) {
	this := p
	_ = this

	localctx = NewWhereClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AqlParserRULE_whereClause)

	defer func() {
		p.ExitRule()
	}()
